fixed layout issue

--- a/client/static/css/layout.css
+++ b/client/static/css/layout.css
@@ -29,6 +29,8 @@
 
 #mmi_svg {
   background: rgb(0, 0, 0);
+    flex: 1;        /* 🔥 THIS replaces height:100% */
+    min-height: 0;  /* 🔥 required */
 }
 
 pre {
@@ -70,8 +72,9 @@ body {
 
   display: grid;
   grid-template-columns: auto;/*300px auto; /* 100px auto 200px*/
-  grid-template-rows: auto 600px;
+  grid-template-rows: 1fr;
   height: 100vh;
+    min-height: 0; 
 }
 
 /* Create three unequal columns that floats next to each other */
@@ -95,9 +98,11 @@ body {
 
 /* Middle column */
 .column.middle {
-  display: inline;
+  display: flex;
+  flex-direction: column;
   grid-column: 1; /* 2 */
   background-color: #009b86;
+    min-height: 0;  
 }
 
 /* right column */
@@ -114,35 +119,11 @@ body {
   padding-bottom: 2px;
   padding-left: 2px;
   padding-right: 2px;
+  flex: 1;
+  min-height: 0;  
+    display: flex;
+    flex-direction: column;
 }
-
-/* Style the footer */
-.footer {
-  text-align: left;
-  border: 1px solid rgba(255, 0, 255, 0.692);
-  margin-bottom: 20px;
-  margin-left: 10px;
-  margin-right: 10px;
-  padding: 10px;
-  padding-bottom: 16px;
-
-	grid-row:   2;
-	grid-column-start: 1;
-	grid-column-end:   3;/* 4 */
-
-	display: grid;
-  grid-template-rows: auto 52px;
-
-  resize: both;
-  overflow: auto;
-}
-
-/* Style the tab */
-.tab {
-  overflow: hidden;
-  grid-row: 2;
-}
-
 
 /* Style the buttons that are used to open the tab content */
 .tab button {
@@ -166,8 +147,8 @@ body {
   transition: 0.3s;
   font-size: 16px;
   font-weight: bold;
-
   display: inline-block;
+   align-self: flex-start;
 }
 
 .mapButton:hover {
@@ -177,6 +158,10 @@ body {
 .mapButton:active {
   transition: 0s;
   background-color: #00e4c5;
+}
+
+.button-row {
+  display: flex;
 }
 
 ul.tabs {
@@ -218,11 +203,10 @@ ul.tabs li.selected a, ul.tabs li.selected a:hover {
 /* Style the tab content */
 div.tabcontents {
   padding: 6px 12px;
-  height: 100%;
+  /*height: 100%;*/
   background: #000;
   grid-row: 1;
   overflow-y: auto;
-
 }
 
 .closeable {
